--- a/index.html
+++ b/index.html
@@ -177,20 +177,23 @@
 
           <div class="photo-strip" aria-label="Operations photos">
             <img
-              src="https://source.unsplash.com/I-_wYj9yOzw/1200x800"
-              alt="Warehouse storage filled with pallets"
-              loading="lazy"
-            />
-            <img
-              src="https://source.unsplash.com/fP4OG67TVes/1200x800"
-              alt="Trucks backed into loading bays"
-              loading="lazy"
-            />
-            <img
-              src="https://source.unsplash.com/VCeHrtkSNL0/1200x800"
-              alt="Warehouse work and handling operations"
-              loading="lazy"
-            />
+  src="https://images.unsplash.com/photo-1672552226380-486fe900b322?auto=format&fit=crop&w=1200&q=80"
+  alt="Warehouse storage with pallets"
+  loading="lazy"
+/>
+
+<img
+  src="https://images.unsplash.com/photo-1672433067458-0668c6603f9c?auto=format&fit=crop&w=1200&q=80"
+  alt="Freight trucks at a loading area"
+  loading="lazy"
+/>
+
+<img
+  src="https://images.unsplash.com/photo-1645736315000-6f788915923b?auto=format&fit=crop&w=1200&q=80"
+  alt="Forklift moving pallets inside a warehouse"
+  loading="lazy"
+/>
+
           </div>
 
           <p class="muted tiny">
