--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           </div>
 
           <div class="hero-card">
-            <h3>Now onboarding</h3>
+            <h3>Now Onboarding New Customers</h3>
             <p>
               Tell us what you’re moving and what you need. We’ll propose a simple plan and pricing.
             </p>
@@ -287,7 +287,7 @@
                 </div>
                 <div class="contact-item">
                   <div class="label">Location</div>
-                  <div>Edmonton, Alberta</div>
+                  <div>Serving the Greater Edmonton Region</div>
                 </div>
               </div>
             </div>
@@ -325,7 +325,7 @@
         <div class="footer-left">
           <img class="footer-logo" src="assets/logo.png" alt="Edmonton Freight Solutions" />
           <p class="tiny muted">
-            Freight handling, storage, and fulfillment in Edmonton.
+            Freight handling, storage, and fulfillment in Treaty 6 Territory.
           </p>
         </div>
 
