--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
         <div class="container hero-inner">
           <div class="hero-copy">
-            <p class="eyebrow">Edmonton, Alberta</p>
+            <p class="eyebrow">Serving the Greater Edmonton Region</p>
             <h1>Freight handling, storage, and fulfillment — made easy.</h1>
             <p class="lead">
               Edmonton Freight Solutions supports local businesses with flexible logistics:
@@ -287,7 +287,7 @@
                 </div>
                 <div class="contact-item">
                   <div class="label">Location</div>
-                  <div>Serving the Greater Edmonton Region</div>
+                  <div>Edmonton, Alberta</div>
                 </div>
               </div>
             </div>
