--- a/index.html
+++ b/index.html
@@ -236,16 +236,10 @@
     <li>Dropshipping support for online sellers</li>
     <li>Repacking, labeling, and kitting when needed</li>
     <li>Distribution prep and outbound staging</li>
-    <li>Overflow capacity for small logistics operators</li>
   </ul>
 
-  <p class="use-cases-note">
-    If your needs don’t fit neatly into a box, tell us what you’re trying to do — we’ll help you figure it out.
-  </p>
-
   <div class="callout">
-    <strong>Not sure what you need?</strong>
-    <span>Send us a quick note — we’ll help you map it out.</span>
+    <span>If your needs don’t fit neatly into a box, tell us what you’re trying to do — we’ll help you figure it out.</span>
   </div>
 </div>
 
