--- a/index.html
+++ b/index.html
@@ -228,14 +228,12 @@
     <li>Overflow warehousing for seasonal peaks</li>
     <li>Short-term storage while freight is in transition</li>
     <li>Long-term storage for steady inventory</li>
-    <li>Container unloading and receiving</li>
-    <li>Trailer unloading and receiving</li>
+    <li>Container/Trailer unloading and receiving</li>
     <li>Cross-docking for fast inbound-to-outbound moves</li>
     <li>Pallet transfers, sorting, and consolidation</li>
     <li>Order fulfillment: pick, pack, and ship</li>
     <li>Dropshipping support for online sellers</li>
     <li>Repacking, labeling, and kitting when needed</li>
-    <li>Distribution prep and outbound staging</li>
   </ul>
 
   <div class="callout">
