--- a/index.html
+++ b/index.html
@@ -287,11 +287,11 @@
                 </div>
                 <div class="contact-item">
                   <div class="label">Phone</div>
-                  <a href="tel:+1-780-000-0000">780-000-0000</a>
+                  <a href="tel:+1-587-568-9138">587-568-9138</a>
                 </div>
                 <div class="contact-item">
                   <div class="label">Location</div>
-                  <div>Edmonton, Alberta</div>
+                  <div>8546 126 Ave NW<br>Edmonton, Alberta T5E 0A4</div>
                 </div>
               </div>
             </div>
