--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               </div>
               <div class="mini">
                 <div class="mini-title">Support</div>
-                <div class="mini-text">Here to grow with you</div>
+                <div class="mini-text">Here by your side</div>
               </div>
             </div>
           </div>
