--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
         "@type": "LocalBusiness",
         "name": "Edmonton Freight Solutions",
         "areaServed": "Edmonton, Alberta",
-        "address": {
+        "address": "8546 126 ave NW",
           "@type": "PostalAddress",
           "addressLocality": "Edmonton",
           "addressRegion": "AB",
           "addressCountry": "CA"
         },
-        "url": "",
-        "telephone": "",
-        "email": "",
+        "url": "edmontonfreightsolutions.ca",
+        "telephone": "587-568-9138",
+        "email": "hello@edmontonfreightsolutions.ca",
         "sameAs": []
       }
     </script>
@@ -177,8 +177,8 @@
 
           <div class="photo-strip" aria-label="Operations photos">
             <img
-  src="https://images.unsplash.com/photo-1672552226380-486fe900b322?auto=format&fit=crop&w=1200&q=80"
-  alt="Warehouse storage with pallets"
+  src="assets/EFS warehouse.jpg"
+  alt="Edmonton Freight Solutions Warehouse"
   loading="lazy"
 />
 
