--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
 
           <div class="photo-strip" aria-label="Operations photos">
             <img
-  src="assets/EFS warehouse.jpg"
-  alt="Edmonton Freight Solutions Warehouse"
+  src="https://images.unsplash.com/photo-1672552226380-486fe900b322?auto=format&fit=crop&w=1200&q=80"
+  alt="Warehouse storage with pallets"
   loading="lazy"
 />
 
