--- a/index.html
+++ b/index.html
@@ -51,6 +51,24 @@
 
     <!-- Header -->
     <header class="site-header">
+      <div class="header-topbar">
+        <div class="container header-topbar-inner">
+          <div class="header-contact-items">
+            <a href="mailto:hello@edmontonfreightsolutions.ca" class="header-contact-item">
+              <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="4" width="20" height="16" rx="2"/><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"/></svg>
+              hello@edmontonfreightsolutions.ca
+            </a>
+            <a href="tel:+15875689138" class="header-contact-item">
+              <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07A19.5 19.5 0 0 1 4.69 13a19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 3.18 2h3a2 2 0 0 1 2 1.72c.127.96.361 1.903.7 2.81a2 2 0 0 1-.45 2.11L7.91 9.91a16 16 0 0 0 6.18 6.18l1.27-1.27a2 2 0 0 1 2.11-.45c.907.339 1.85.573 2.81.7A2 2 0 0 1 22 16.92z"/></svg>
+              587-568-9138
+            </a>
+            <span class="header-contact-item">
+              <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z"/><circle cx="12" cy="10" r="3"/></svg>
+              8546 126 Ave NW, Edmonton, AB
+            </span>
+          </div>
+        </div>
+      </div>
       <div class="container header-inner">
         <a class="brand" href="#">
           <img class="brand-logo" src="assets/logo.png" alt="Edmonton Freight Solutions logo" />
@@ -62,8 +80,7 @@
 
         <nav class="site-nav" aria-label="Primary">
           <a href="#services">Services</a>
-          <a href="#why">Why us</a>
-          <a href="#how">How it works</a>
+          <a href="#why">Who We Are</a>
           <a href="#contact" class="btn btn-small">Get a quote</a>
         </nav>
       </div>
