--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Edmonton Freight Solutions | Flexible Storage & Logistics</title>
     <meta
       name="description"
-      content="Friendly, flexible freight handling, warehousing, and fulfillment in Edmonton. Pay only for what you need, whether it be short- or long-term storage, or pick-pack-ship support."
+      content="Flexible freight handling, warehousing, and fulfillment in central Edmonton. Pay only for what you need, whether it be short- or long-term storage, cross-docking or pick-pack-ship support."
     />
 
     <!-- Open Graph -->
     <meta property="og:title" content="Edmonton Freight Solutions" />
     <meta
       property="og:description"
-      content="Flexible storage and logistics in Edmonton — friendly, reliable, and easy to work with."
+      content="Flexible storage and logistics in Edmonton — professional, experienced, and easy to work with."
     />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="assets/logo.png" />
@@ -94,11 +94,9 @@
         <div class="container hero-inner">
           <div class="hero-copy">
             <p class="eyebrow">Serving the Greater Edmonton Region</p>
-            <h1>Flexible Storage & Logistics - only pay for what you use.</h1>
+            <h1>Your Edmonton Source for cross-docking, storage & logistics.</h1>
             <p class="lead">
-              Edmonton Freight Solutions supports local businesses with flexible logistics:
-              <strong>cross-docking</strong>, <strong>short- and long-term storage</strong>, and
-              <strong>fulfillment services</strong>.
+              <strong>No contracts.</strong> Only pay for what you need.
             </p>
 
             <div class="cta-row">
@@ -107,35 +105,10 @@
             </div>
 
             <ul class="hero-bullets">
-              <li>Friendly, responsive team</li>
+              <li>Friendly, experienced team</li>
+              <li>Clean, secure and heated warehouse</li>
               <li>Flexible terms and upfront communication</li>
-              <li>Built for local growing businesses</li>
             </ul>
-          </div>
-
-          <div class="hero-card">
-            <h3>Now Onboarding New Customers</h3>
-            <p>
-              Tell us what you’re moving and what you need. We’ll propose a simple plan and pricing.
-            </p>
-            <div class="mini-grid">
-              <div class="mini">
-                <div class="mini-title">cross-docking</div>
-                <div class="mini-text">Containers &amp; trailers</div>
-              </div>
-              <div class="mini">
-                <div class="mini-title">Storage</div>
-                <div class="mini-text">Short &amp; long term</div>
-              </div>
-              <div class="mini">
-                <div class="mini-title">Fulfillment</div>
-                <div class="mini-text">Pick, pack &amp; ship</div>
-              </div>
-              <div class="mini">
-                <div class="mini-title">Support</div>
-                <div class="mini-text">Here by your side</div>
-              </div>
-            </div>
           </div>
         </div>
       </section>
