Update section names and improve service descriptions

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <nav class="site-nav" aria-label="Primary">
           <a href="#services">Services</a>
-          <a href="#why">Who We Are</a>
+          <a href="#who">Who We Are</a>
           <a href="#contact" class="btn btn-small">Get a quote</a>
         </nav>
       </div>
@@ -128,36 +128,42 @@
               <h3>Warehousing &amp; Storage</h3>
               <p>Flexible space for overflow, seasonal inventory, or steady long-term storage.</p>
               <ul>
-                <li>Short-term and long-term options</li>
-                <li>Organized receiving and inventory handling</li>
+                <li>Affordable short and long-term options</li>
+                <li>Organized receiving, shipping, inventory management</li>
                 <li>Clear, straightforward communication</li>
+                <li>Clean, secure, heated modern warehouse</li>
               </ul>
             </article>
 
             <article class="card">
-              <h3>Container &amp; Trailer Handling</h3>
-              <p>We handle inbound and outbound freight with care and speed.</p>
+              <h3>Cross Docking</h3>
+              <p>We handle inbound and outbound freight quickly and professionally.</p>
               <ul>
-                <li>Containers and trailers</li>
-                <li>Unloading, loading, and cross-docking</li>
-                <li>Pallet transfers and consolidation</li>
+                <li>Dock and ground level loading</li>
+                <li>Pallet transfers and load consolidation</li>
+                <li>Load adjustments</li>
+                <li>Loose freight handling>
+                <li>Final mile and freight forwarding</li>
+                <li>Short and long term storage</li>
               </ul>
             </article>
 
             <article class="card">
-              <h3>Pick, Pack &amp; Ship</h3>
-              <p>Fulfillment support for e-commerce and dropshipping — without the headaches.</p>
+              <h3>Container Services</h3>
+              <p>Comprehensive services for importers of all sizes.</p>
               <ul>
-                <li>Order picking and packing</li>
-                <li>Labeling and shipment preparation</li>
-                <li>Process built around your workflow</li>
+                <li>Drayage and destuffing</li>
+                <li>Sorting, palletizing, wrapping</li>                
+                <li>Labelling and inventory management</li>
+                <li>Final mile delivery</li>
               </ul>
             </article>
 
             <article class="card">
-              <h3>Value-Add Support</h3>
+              <h3>Value-Add Services</h3>
               <p>Extra help when you need it: repacks, labeling, kitting, and more.</p>
               <ul>
+                <li>Palletizing and wrapping</li>
                 <li>Repacking and labeling</li>
                 <li>Kitting and prep work</li>
                 <li>Flexible capacity for busy periods</li>
@@ -190,8 +196,8 @@
         </div>
       </section>
 
-      <!-- Why Us -->
-      <section id="why" class="section section-alt">
+      <!-- Who We Are -->
+      <section id="who" class="section section-alt">
         <div class="container">
           <div class="split">
             <div>
