Add use case for customer pickups and load adjustments

--- a/index.html
+++ b/index.html
@@ -225,8 +225,10 @@
     <li>Overflow warehousing for seasonal peaks</li>
     <li>Short-term storage while freight is in transition</li>
     <li>Long-term storage for steady inventory</li>
+    <li>Long-term storage for customer pickups</li>
     <li>Container/Trailer unloading and receiving</li>
     <li>Cross-docking for fast inbound-to-outbound moves</li>
+    <li>Adjusting loads and rebuilding pallets</li> 
     <li>Pallet transfers, sorting, and consolidation</li>
     <li>Order fulfillment: pick, pack, and ship</li>
     <li>Dropshipping support for online sellers</li>
