Update address in contact information

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 </div>
                 <div class="contact-item">
                   <div class="label">Location</div>
-                  <div>8546 126 Ave NW<br>Edmonton, Alberta T5E 0A4</div>
+                  <div>8546 126 Ave NW<br>Edmonton, Alberta T5B 1G9</div>
                 </div>
               </div>
             </div>
